--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@ highlighter: pygments
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : Jekyll Bootstrap
+title : 码猫Tikee
 tagline: Site Tagline
 author :
-  name : Name Lastname
-  email : blah@email.test
-  github : username
-  twitter : username
-  feedburner : feedname
+  name : Tikee
+  email : gloomy1993@qq.com
+  github : tikee2014
+#  twitter : username
+  feedburner : 码猫
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
