--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ permalink: /:categories/:year/:month/:day/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: pygments
-pygments: true
+
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
@@ -14,7 +14,7 @@ author :
   name : Tikee
   email : gloomy1993@qq.com
   github : tikee2014
-#  twitter : username
+  twitter : username
   feedburner : 码猫
 
 # The production_url is only used when full-domain names are needed
