--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ mardown: redcarpet
 # so be sure to set them if your theme uses them.
 #
 title : 码猫
-tagline: 码猫
+tagline: "Hi!"
 author :
   name : Tikee
   email : gloomy1993@qq.com
