--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : tikee2014
     livefyre :
       site_id : 123
     intensedebate :
